# learn_fast_ai

./: 00-is-it-a-bird-creating-a-model-from-your-own-data.ipynb  02-saving-a-basic-fastai-model.ipynb  Aircraft_dataset.ipynb  README.md  binary.ipynb  model.ipynb  pyproject.toml
